# slack-assistant

./: .env.example  .gitignore  README.md  TODO.md  app_manifest.yaml  pyproject.toml
docs/: code-review-2026-03-18.md  mcp-capability-spike.md  review-checklist.md  review-notes.md  review-verification-2026-03-18.md
docs/adr/: 0001-semantic-summary-and-host-rendered-actors.md  0002-emoji-first-digest-direction.md  README.md
scripts/: eval_summary_quality.py  mcp_capability_spike.py  render_manifest.py
src/slack_assistant/: __init__.py  config.py  digest_dispatcher.py  digest_scheduler.py  formatter.py  main.py  mcp_auth.py  mcp_client.py  models.py  relevance.py  services.py  slack_app.py  store.py  upstage_client.py  web.py
tests/: conftest.py  test_capability_spike.py  test_config.py  test_digest_dispatcher.py  test_digest_scheduler.py  test_formatter.py  test_mcp_auth.py  test_mcp_client.py  test_relevance.py  test_services.py  test_slack_app.py  test_store.py  test_upstage_client.py  test_web.py
tickets/: README.md  TKT-001-emoji-first-digest-defaults.md  TKT-002-canonical-author-name-resolution.md  TKT-003-semantic-summary-quality-hardening.md  TKT-004-team-group-tracking.md  TKT-005-formatting-and-rendering-polish.md  TKT-006-slack-app-branding-and-onboarding.md  TKT-007-performance-and-concurrency.md  TKT-008-structured-error-capture-and-observability.md
