[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-assistant"
version = "0.1.0"
description = "Slack MCP + Upstage summary bot"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=43.0",
  "Flask>=3.0",
  "httpx>=0.27",
  "openai>=1.65",
  "python-dotenv>=1.0",
  "slack-bolt>=1.23",
  "slack-sdk>=3.36",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-mock>=3.14",
  "ruff>=0.11",
]

[project.scripts]
slack-assistant = "slack_assistant.main:main"
slack-assistant-capability-spike = "slack_assistant.capability_spike:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
mypy_path = "src"
